<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SAP Sales Order</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="navigateto">Navigate to</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="logout_title">Logout</string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="login_has_failed">Login has failed, see the log for more details</string>
    <string name="no_results">No results</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_value">no data</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="logon">Logon</string>
    <string name="asterisk">*</string>
    <string name="err_msg">The request has returned with an error: </string>
    <string name="ok_msg">The request was successful</string>
    <string name="capgemini">Capgemini logo</string>
    <string name="email">Email buyer</string>
    <string name="tel">Call buyer</string>
    <string name="map">Destination</string>
    <string name="contact">Contact</string>
</resources>
